infra/kafka-connect/network-policy-allow-kafbat.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafbat-to-connect-api
  namespace: kiwi-lab
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: debezium-mysql-shared
      strimzi.io/kind: KafkaConnect
      strimzi.io/name: debezium-mysql-shared-connect
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kafka-ui
      ports:
        - port: 8083
          protocol: TCP
  policyTypes:
    - Ingress
